[gd_scene load_steps=8 format=3 uid="uid://cmqeqln3x2o4m"]

[ext_resource type="Script" path="res://src/appdata/maze1intro.gd" id="1_fkre3"]
[ext_resource type="FontFile" uid="uid://dxxefdx78tvkr" path="res://assets/TT Chocolates Trial Bold.otf" id="2_7weyr"]
[ext_resource type="Texture2D" uid="uid://bjfi3i074kvsb" path="res://assets/Back button.png" id="3_w7304"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7xb3"]
bg_color = Color(0.823529, 0.0745098, 0.45098, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cj3kh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipupu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahp7q"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_fkre3")
metadata/_edit_vertical_guides_ = [8.0, 120.0]
metadata/_edit_horizontal_guides_ = [8.0, 48.0]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.901961, 0.831373, 0.870588, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.136
anchor_right = 0.609
anchor_bottom = 0.222
offset_left = -3.05176e-05
offset_top = -0.128006
offset_right = 0.431885
offset_bottom = 2.14398
grow_horizontal = 2
theme_override_colors/font_color = Color(0.764706, 0.12549, 0.45098, 1)
theme_override_fonts/font = ExtResource("2_7weyr")
theme_override_font_sizes/font_size = 45
text = "The Labyrinth"

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.271
anchor_top = 0.432
anchor_right = 0.819
anchor_bottom = 0.617
offset_left = -0.192017
offset_top = 0.0639954
offset_right = 0.511902
offset_bottom = 4.18396
theme_override_colors/font_color = Color(0.764706, 0.12549, 0.45098, 1)
theme_override_font_sizes/font_size = 20
text = "In this game you have to complete the maze.
The maze contains the doors which are locked with the code lock.
To unlock the lock use the code snip which you can find near by. 
To move your character use WASD keys on the keyboard"

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.361
anchor_top = 0.864
anchor_right = 0.361
anchor_bottom = 0.864
offset_left = 0.12796
offset_top = 0.127991
offset_right = 312.128
offset_bottom = 85.128
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_7weyr")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_k7xb3")
text = "START"

[node name="Button2" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 0.007
anchor_bottom = 0.012
offset_left = -0.0640001
offset_top = 0.224
offset_right = 111.936
offset_bottom = 44.224
theme_override_colors/font_color = Color(0.823529, 0.0745098, 0.45098, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_7weyr")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_cj3kh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ipupu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ahp7q")
text = "Back"
icon = ExtResource("3_w7304")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
